WRP-2711 fixing issue relating to the alignment of the link button in a notification box

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -318,6 +318,7 @@ td select {
     vertical-align: middle;
     min-height: 44px;
     width: 100%;
+	margin-right:10px;
     text-align: left;
 }
 .alert .fa-sca.fa-close {
