--- a/app/styles/ihtsdo.scss
+++ b/app/styles/ihtsdo.scss
@@ -9298,7 +9298,7 @@ fieldset[disabled] .btn-info:hover {
   border-color: #42A5F5;
 }
 .blue {
-  background-color: #009cd7;
+  background-color: #00a4e4;
   color: #fff;
 }
 .blue-text {
